# rise-camp-ray-tutorial-2020

./: 1. Preprocessing with Ray tasks.ipynb  2. Deploying models with Ray Serve.ipynb  3. Deploying a custom ensemble model.ipynb  Dockerfile  Makefile  deploy_color.py  pyproject.toml  run_1.sh  run_2.sh  run_all.sh  shutdown.py  util.py
risecamp-2020/: 1. Preprocessing with Ray tasks.ipynb  2. Deploying models with Ray Serve.ipynb  3. Deploying a custom ensemble model.ipynb  deploy_plot.py  requirements.txt  setup.py  util.py
risecamp-2021/: 1 Introducing Ray core.ipynb  2 Introducing RayDatasets.ipynb  3 Building an end-to-end ML data ingest pipeline.ipynb  README.md  requirements.txt  setup-conda-env.sh  setup-env.sh  setup-virtualenv.sh
